parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@function_def.py-8.snap
---
source: parser/src/lexer/mod.rs
description: "def func() -> None: pass"
input_file: parser/test_data/inputs/one_liners/function_def.py
---
[
    Token {
        kind: Def,
        value: None,
        start: 0,
        end: 3,
    },
    Token {
        kind: Identifier,
        value: Str(
            "func",
        ),
        start: 4,
        end: 8,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 9,
        end: 10,
    },
    Token {
        kind: Arrow,
        value: None,
        start: 11,
        end: 13,
    },
    Token {
        kind: None,
        value: None,
        start: 14,
        end: 18,
    },
    Token {
        kind: Colon,
        value: None,
        start: 18,
        end: 19,
    },
    Token {
        kind: Pass,
        value: None,
        start: 20,
        end: 24,
    },
]
