parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@generator_expressions.py-2.snap
---
source: parser/src/lexer/lexer.rs
description: (a for a in b if c)
input_file: parser/test_data/inputs/one_liners/generator_expressions.py
---
[
    Token {
        kind: LeftParen,
        value: None,
        start: 0,
        end: 1,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 1,
        end: 2,
    },
    Token {
        kind: For,
        value: None,
        start: 3,
        end: 6,
    },
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 7,
        end: 8,
    },
    Token {
        kind: In,
        value: None,
        start: 9,
        end: 11,
    },
    Token {
        kind: Identifier,
        value: Str(
            "b",
        ),
        start: 12,
        end: 13,
    },
    Token {
        kind: If,
        value: None,
        start: 14,
        end: 16,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 17,
        end: 18,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 18,
        end: 19,
    },
]
