parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@generator_expressions.py-5.snap
---
source: parser/src/lexer/mod.rs
description: (ord(c) for line in file for c in line)
input_file: parser/test_data/inputs/one_liners/generator_expressions.py
---
[
    Token {
        kind: LeftParen,
        value: None,
        start: 0,
        end: 1,
    },
    Token {
        kind: Identifier,
        value: Str(
            "ord",
        ),
        start: 1,
        end: 4,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 4,
        end: 5,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 5,
        end: 6,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 6,
        end: 7,
    },
    Token {
        kind: For,
        value: None,
        start: 8,
        end: 11,
    },
    Token {
        kind: Identifier,
        value: Str(
            "line",
        ),
        start: 12,
        end: 16,
    },
    Token {
        kind: In,
        value: None,
        start: 17,
        end: 19,
    },
    Token {
        kind: Identifier,
        value: Str(
            "file",
        ),
        start: 20,
        end: 24,
    },
    Token {
        kind: For,
        value: None,
        start: 25,
        end: 28,
    },
    Token {
        kind: Identifier,
        value: Str(
            "c",
        ),
        start: 29,
        end: 30,
    },
    Token {
        kind: In,
        value: None,
        start: 31,
        end: 33,
    },
    Token {
        kind: Identifier,
        value: Str(
            "line",
        ),
        start: 34,
        end: 38,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 38,
        end: 39,
    },
]
