parser/src/lexer/snapshots/enderpy_python_parser__lexer__tests__snapshot_test_lexer_and_errors@generator_expressions.py-6.snap
---
source: parser/src/lexer/lexer.rs
description: "(x*y for x in range(10) for y in range(10) if x*y > 10)\n"
input_file: parser/test_data/inputs/one_liners/generator_expressions.py
---
[
    Token {
        kind: LeftParen,
        value: None,
        start: 0,
        end: 1,
    },
    Token {
        kind: Identifier,
        value: Str(
            "x",
        ),
        start: 1,
        end: 2,
    },
    Token {
        kind: Mul,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: Identifier,
        value: Str(
            "y",
        ),
        start: 3,
        end: 4,
    },
    Token {
        kind: For,
        value: None,
        start: 5,
        end: 8,
    },
    Token {
        kind: Identifier,
        value: Str(
            "x",
        ),
        start: 9,
        end: 10,
    },
    Token {
        kind: In,
        value: None,
        start: 11,
        end: 13,
    },
    Token {
        kind: Identifier,
        value: Str(
            "range",
        ),
        start: 14,
        end: 19,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 19,
        end: 20,
    },
    Token {
        kind: Integer,
        value: Number(
            "10",
        ),
        start: 20,
        end: 22,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 22,
        end: 23,
    },
    Token {
        kind: For,
        value: None,
        start: 24,
        end: 27,
    },
    Token {
        kind: Identifier,
        value: Str(
            "y",
        ),
        start: 28,
        end: 29,
    },
    Token {
        kind: In,
        value: None,
        start: 30,
        end: 32,
    },
    Token {
        kind: Identifier,
        value: Str(
            "range",
        ),
        start: 33,
        end: 38,
    },
    Token {
        kind: LeftParen,
        value: None,
        start: 38,
        end: 39,
    },
    Token {
        kind: Integer,
        value: Number(
            "10",
        ),
        start: 39,
        end: 41,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 41,
        end: 42,
    },
    Token {
        kind: If,
        value: None,
        start: 43,
        end: 45,
    },
    Token {
        kind: Identifier,
        value: Str(
            "x",
        ),
        start: 46,
        end: 47,
    },
    Token {
        kind: Mul,
        value: None,
        start: 47,
        end: 48,
    },
    Token {
        kind: Identifier,
        value: Str(
            "y",
        ),
        start: 48,
        end: 49,
    },
    Token {
        kind: Greater,
        value: None,
        start: 50,
        end: 51,
    },
    Token {
        kind: Integer,
        value: Number(
            "10",
        ),
        start: 52,
        end: 54,
    },
    Token {
        kind: RightParen,
        value: None,
        start: 54,
        end: 55,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 55,
        end: 56,
    },
]
